# auto-caption

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  components.json  package.json  roadmap.md  svelte.config.js
e2e/: smoke.applescript
scripts/: gen_icon.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  deps.rs  lib.rs  main.rs
src-tauri/src/pipeline/: ass.rs  audio.rs  burn.rs  mod.rs  probe.rs  transcribe.rs  types.rs
src/lib/components/: SettingsPanel.svelte  ThemePicker.svelte
src/routes/: +layout.svelte  +page.svelte
static/fonts/: OFL.md
transcripts/: lav-mic-analysis.md
